# GoodManus

./: .env.example  .gitignore  AI-Agent开发指南.md  LICENSE  README.md  architecture.html  docker-compose.yml  技术文档.md  技术文档_Notion版.md  架构图.md
api/: .gitignore  Dockerfile  README.md  alembic.ini  config.yaml.example  pyproject.toml  pytest.ini  requirements.txt  run.sh
api/alembic/: env.py
api/alembic/versions/: 5e73dbb0a528_.py  9a750a2b019f_create_files_table.py  b55dc601bc2c_.py  d399f4d184ce_add_demo_table.py
api/app/: main.py
api/app/application/errors/: exceptions.py
api/app/application/services/: agent_service.py  app_config_service.py  file_service.py  session_service.py  status_service.py
api/app/domain/models/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  session.py  tool_result.py
api/app/domain/repositories/: uow.py  (+3 more)
api/app/interfaces/: service_dependencies.py
api/core/: config.py
api/tests/: conftest.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
sandbox/: .gitignore  README.md  pyproject.toml  requirements.txt  supervisord.conf
sandbox/app/: main.py
sandbox/app/core/: config.py  middleware.py
sandbox/app/interfaces/: service_dependencies.py
sandbox/app/interfaces/endpoints/: file.py  routes.py  shell.py  supervisor.py
sandbox/app/interfaces/errors/: exception_handler.py  exceptions.py
sandbox/app/interfaces/schemas/: file.py  shell.py  supervisor.py
sandbox/app/models/: file.py  shell.py  supervisor.py
sandbox/app/services/: file.py  shell.py  supervisor.py
(+46 files in other folders)
