[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
